--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
+    <parent>
+        <groupId>org.sonatype.oss</groupId>
+        <artifactId>oss-parent</artifactId>
+        <version>7</version>
+    </parent>
     <groupId>com.lateral-thoughts</groupId>
     <artifactId>spring-liquibase-extensions</artifactId>
     <version>1.0-SNAPSHOT</version>
@@ -10,6 +14,40 @@
     <name>Spring Liquibase extensions</name>
     <description>Provides some additional capabilities to Spring Liquibase integration</description>
     <inceptionYear>2013</inceptionYear>
+    <url>https://github.com/LateralThoughts/spring-liquibase-extensions</url>
+
+    <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
+    <organization>
+        <name>Lateral Thoughts</name>
+        <url>http://www.lateral-thoughts.com</url>
+    </organization>
+
+    <scm>
+        <url>https://github.com/LateralThoughts/spring-liquibase-extensions</url>
+        <connection>scm:git:git@github.com:LateralThoughts/spring-liquibase-extensions.git</connection>
+        <developerConnection>scm:git:git@github.com:LateralThoughts/spring-liquibase-extensions.git
+        </developerConnection>
+    </scm>
+
+    <developers>
+        <developer>
+            <id>fbiville</id>
+            <name>Florent Biville</name>
+            <email>florent.biville@gmail.com</email>
+            <organization>Lateral Thoughts</organization>
+            <organizationUrl>http://www.lateral-thoughts.com</organizationUrl>
+            <roles>
+                <role>developer</role>
+            </roles>
+        </developer>
+    </developers>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -59,4 +97,34 @@
             </plugin>
         </plugins>
     </build>
+
+    <profiles>
+        <profile>
+            <id>release-sign-artifacts</id>
+            <activation>
+                <property>
+                    <name>performRelease</name>
+                    <value>true</value>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-gpg-plugin</artifactId>
+                        <version>1.1</version>
+                        <executions>
+                            <execution>
+                                <id>sign-artifacts</id>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>sign</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
